updted to reflect gdg monrovia

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,5 +17,5 @@
   "display": "standalone",
   "background_color": "#ffff",
   "theme_color": "#0277bd",
-  "description": "Aura is the website template that helps you to set GDG's Communities website with events, team and management in a few minutes."
+  "description": "GDG Mornrovia is chapter to the Global Google Developers Group."
 }
