--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,14 @@
 {
   "hosting": {
-    "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [ {
-      "source": "/public{,/**}",
-      "destination": "/index.html"
-    } ]
+      "public": "dist",
+      "rewrites": [ {
+          "source": "**",
+          "destination": "/index.html"
+      } ],
+      "ignore": [
+          "firebase.json",
+          "**/.*",
+          "**/node_modules/**"
+      ]
   }
 }
