--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./public/index.html",
   "display": "standalone",
   "background_color": "#ffff",
   "theme_color": "#0277bd",
